Added http:// to the URL
Redirect was acting funny and putting the .org on the end of the .com URL

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ Church in Halifax
  You are being redirected to churchinhalifax.org 
 
  If you do not get redirected please 
- <a href='www.churchinhalifax.org'>Click Here</a>
+ <a href='http://www.churchinhalifax.org'>Click Here</a>
 
 <script language='javascript'>
- document.location.href="www.churchinhalifax.org";
+ document.location.href="http://www.churchinhalifax.org";
 </script>
