Put Javascript redirect back

--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@ Church in Halifax
  <a href='http://www.churchinhalifax.org'>Click Here</a>
 
 <script language='javascript'>
- //document.location.href="http://www.churchinhalifax.org";
+ document.location.href="http://www.churchinhalifax.org";
 </script>
